--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="{{url_for('static',filename=css/style.css)}}">
 </head>
 <body>
-    {% include 'navbar.html' %}
+    {% include 'navbar.html' %} {% endblock %}
     {% block content %}
     {% endblock %}
-    {% include 'footer.html' %}
+    {% include 'footer.html' %} {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
