--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -1,26 +1,21 @@
-<div class="navbar navbar-inverse" role="navigation">
+<nav class="navbar navbar-expand-lg sticky-top navbar-light bg-dark mb-4">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/"> Watchlist </a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-        </div>
-       
-        <ul class="nav navbar-nav navbar-right">
-            {% if current_user.is_authenticated %}
-            <li><a href="{{url_for('main.profile',uname=current_user.username)}}" id="nav5"><i class="fa-solid fa-user"></i> Profile</a></li>
-            <li><a href="{{url_for('auth.logout')}}" id="nav3">Sign out</a></li>
-            {% else %}
-            <li><a href="{{url_for('auth.login')}}" id="nav4"><i class="fa-solid fa-user-lock"></i> Sign in</a></li>
-            {%endif%}
-          </ul>
+      <a class="navbar-brand text-white" href="#">Movie of the Day</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Sign up</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#" tabindex="-1" aria-disabled="true">Login</a>
+          </li>
+        </ul>
+      </div>
     </div>
-</div>
+  </nav>
